--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -4800,6 +4800,16 @@ gcyl.machine.cleanroom.tooltip.2=§cMay cause performance issues! Read additiona
 gcyl.machine.cleanroom.tooltip.3=§cTo increase performance, the multiblock only checks its structure pattern on forming and when saving the world.
 gcyl.machine.cleanroom.tooltip.4=§c§lDO NOT TRY TO CHEAT THIS! §r§cDoing so will cause the multiblock to constantly check its structure upon loading into the world, causing major TPS lag until fixed.
 gcyl.machine.cleanroom.tooltip.5=§c§lMake sure the structure is valid if you make changes to the multiblock!
+gcyl.recipe.cleanroom_iso_3.display_name=ISO 3 Cleanroom
+gcyl.recipe.cleanroom_iso_2.display_name=ISO 2 Cleanroom
+gcyl.recipe.cleanroom_iso_1.display_name=ISO 1 Cleanroom
+tile.cleanroom_casing.filter_casing_iso_3.name=ISO 3 Filter Casing
+tile.cleanroom_casing.filter_iso_3.tooltip=Creates an §aISO 3 Specification§7 Environment
+tile.cleanroom_casing.filter_casing_iso_2.name=ISO 2 Filter Casing
+tile.cleanroom_casing.filter_iso_2.tooltip=Creates an §aISO 2 Specification§7 Environment
+tile.cleanroom_casing.filter_casing_iso_1.name=ISO 1 Filter Casing
+tile.cleanroom_casing.filter_iso_1.tooltip=Creates an §aISO 1 Specification§7 Environment
+
 
 gcyl.material.bismuth_210=Bismuth 210
 
@@ -4893,6 +4903,7 @@ gcyl.machine.wireless_energy_hatch.input.max.name=§dMAX Wireless Energy Hatch
 gcyl.machine.wireless_energy_hatch.input.max.4.name=§dMAX 4A Wireless Energy Hatch
 gcyl.machine.wireless_energy_hatch.input.max.16.name=§dMAX 16A Wireless Energy Hatch
 gcyl.machine.wireless_energy_hatch.input.max.64.name=§dMAX 64A Wireless Energy Hatch
+
 
 
 
