wpss tooltip update

--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -4817,7 +4817,7 @@ gcyl.machine.wireless_pss.name=§dWireless Power Substation
 gcyl.machine.wireless_power_substation.tooltip1=Use a Screwdriver to activate Wireless. Use while Sneaking to make it Private.
 gcyl.machine.wireless_power_substation.tooltip4=Can only be changed by replacing the controller.
 gcyl.machine.wireless_power_substation.tooltip2=Every 60 seconds, it will balance the power between itself and the Wireless Network.
-gcyl.machine.wireless_power_substation.tooltip3=Minimum of 40 Casings.
+gcyl.machine.wireless_power_substation.tooltip3=More restrictive on minimum casings!
 gcyl.multiblock.wireless_pss.wireless_eu=§dWireless EU: %s
 gcyl.multiblock.wireless_pss.public=(Public)
 gcyl.multiblock.wireless_pss.private=(%s)
