--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -4798,6 +4798,7 @@ gcyl.machine.cleanroom.tooltip.2=§cMay cause performance issues! Read additiona
 gcyl.machine.cleanroom.tooltip.3=§cTo increase performance, the multiblock only checks its structure pattern on forming and when saving the world.
 gcyl.machine.cleanroom.tooltip.4=§c§lDO NOT TRY TO CHEAT THIS! §r§cDoing so will cause the multiblock to constantly check its structure upon loading into the world, causing major TPS lag until fixed.
 gcyl.machine.cleanroom.tooltip.5=§c§lMake sure the structure is valid if you make changes to the multiblock!
+gcyl.machine.cleanroom.tooltip.6=§aReplace the controller block if you are having issues before reporting a bug!
 gcyl.recipe.cleanroom_iso_3.display_name=ISO 3 Cleanroom
 gcyl.recipe.cleanroom_iso_2.display_name=ISO 2 Cleanroom
 gcyl.recipe.cleanroom_iso_1.display_name=ISO 1 Cleanroom
