--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -2674,7 +2674,7 @@ gcyl.material.opv_superconductor_base=OpV Superconductor Base
 gcyl.material.samarium_magnetic=Magnetic Samarium
 gcyl.material.quantum=Quantum
 gcyl.material.black_titanium=Black Titanium
-gcyl.material.tungsten_titanium_carbide=Tungsten Titanium Carbide
+gcyl.material.tungsten_titanium_carbide=Tungsten Titanium Carbide 70/30
 gcyl.material.titan_steel=Titan Steel
 gcyl.material.inconel_b=Inconel 792
 gcyl.material.pikyonium=Pikyonium
