--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -4827,6 +4827,7 @@ gcyl.machine.wireless_power_substation.tooltip4=Can only be changed by replacing
 gcyl.machine.wireless_power_substation.tooltip2=Every 60 seconds, it will balance the power between itself and the Wireless Network.
 gcyl.machine.wireless_power_substation.tooltip3=More restrictive on minimum casings!
 gcyl.multiblock.wireless_pss.wireless_eu=§dWireless EU: %s
+gcyl.multiblock.wireless_pss.player_offline=§c(Player Offworld)
 gcyl.multiblock.wireless_pss.public=(Public)
 gcyl.multiblock.wireless_pss.private=(%s)
 gcyl.multiblock.wireless_pss.not_initialized=§dWireless EU: §cNot Initialized
