--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -4913,6 +4913,7 @@ gcyl.machine.wireless_energy_hatch.input.max.4.name=§dMAX 4A Wireless Energy Ha
 gcyl.machine.wireless_energy_hatch.input.max.16.name=§dMAX 16A Wireless Energy Hatch
 gcyl.machine.wireless_energy_hatch.input.max.64.name=§dMAX 64A Wireless Energy Hatch
 
+metaitem.nuclear.star.name=Nuclear Star
 
 
 
