--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -4124,7 +4124,7 @@ gcyl.material.basr_titanate_preparation=Barium-Strontium Titanate Preparation
 gcyl.material.carbon_tetrachloride=Carbon Tetrachloride
 gcyl.material.chloroethane=Chloroethane
 gcyl.material.actinium_superhydride_plasma=Actinium Superhydride Plasma
-gcyl.material.neutron_plasma=Neutron Plasma
+gcyl.material.neutron_plasma=Neutron
 gcyl.material.superheavy_mix=Superheavy Mix
 
 gcyl.material.chlorinated_solvents=Chlorinated Solvents
@@ -4959,4 +4959,31 @@ metaitem.living_bio.soc.tooltip=Mutated Living System on Chip
 metaitem.wafer.bio.name=Living Bio Wafer
 metaitem.wafer.bio.tooltip=Mutated Living Raw Circuit
 
+metaitem.wafer.npic.name=NPIC Wafer
+metaitem.wafer.npic.tooltip=Raw NPIC
+metaitem.wafer.ppic.name=PPIC Wafer
+metaitem.wafer.ppic.tooltip=Raw PPIC
+metaitem.wafer.qpic.name=QPIC Wafer
+metaitem.wafer.qpic.tooltip=Raw QPIC
+
+#TODO Add tooltips to these
+metaitem.npic.name=NPIC
+metaitem.npic.tooltip=
+metaitem.ppic.name=PPIC
+metaitem.ppic.tooltip=
+metaitem.qpic.name=QPIC
+metaitem.qpic.tooltip=
+
+gcyl.machine.wireless_data_bank.name=§dWireless Data Bank
+gcyl.machine.wireless_data_bank.tooltip.1=Use a Screwdriver to activate Wireless. Use while Sneaking to make it Private.
+gcyl.machine.wireless_data_bank.tooltip.2=Can only be changed by replacing the controller.
+gcyl.machine.wireless_data_bank.tooltip.3=Every 60 seconds, it will send Data stored in its Input Buses to the Wireless Network.
+gcyl.machine.wireless_data_bank.tooltip.6=Can only have 1 Wireless Data Bank for a Public Network or per Private Network.
+gcyl.machine.wireless_data_bank.tooltip.4=Wireless Bulk Data Storage
+gcyl.machine.wireless_data_bank.tooltip.5=Uses §f%s EU/t§7 per Input Bus.
+gcyl.machine.wireless_data_hatch.name=§dWireless Data Access Hatch
+gcyl.machine.wireless_data_hatch.tooltip.1=Wireless Data Access for Multiblocks
+gcyl.machine.wireless_data_hatch.tooltip.2=Use a Screwdriver to activate Wireless. Use while Sneaking to make it Private.
+gcyl.machine.wireless_data_hatch.tooltip.3=Can only be changed by replacing.
+gcyl.machine.wireless_data_hatch.tooltip.4=Every 60 seconds, it will retrieve Data from the Wireless Network.
 
