Fix a lot of chemical reactor recipes  Blacklist Deep Miner ores for Void Miner

--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -3833,7 +3833,7 @@ gcyl.material.acidic_mixture=Acidic Mixture
 gcyl.material.benzenesulfonyl_chloride=Benzenesulfonyl Chloride
 gcyl.material.sulfanilamide=Sulfanilamide
 gcyl.material.silica_gel_base=Silica Gel Base
-gcyl.material.ethanol_100=100% Ethanol
+gcyl.material.ethanol_100=100%% Ethanol
 gcyl.material.piranha_solution=Piranha Solution
 gcyl.material.water_agar_mix=Water-Agar Mix
 gcyl.material.bacterial_growth_medium=Bacterial Growth Medium
