void ore miner rework

--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -3048,8 +3048,9 @@ gregtech.multiblock.recipe=Screw to change recipe. Currently using: %s
 gregtech.universal.tooltip.efficiency=Efficiency: %s %%
 
 gregtech.multiblock.universal.energy_used=Energy Use: %d EU
-gregtech.multiblock.universal.vom.temperature=Temperature: %s K
-gregtech.multiblock.universal.drilling_fluid_amount=Current Drilling Mud: %.2fmB
+gregtech.multiblock.universal.vom.temperature=Temperature: %sK
+gregtech.multiblock.universal.vom.max_temperature=Max Temperature: %sK
+gregtech.multiblock.universal.drilling_fluid_amount=Fluids Consumption: %.2fmB
 gregtech.multiblock.universal.overheat=Overheated!
 
 gregtech.machine.world_accelerator.mode.tile=Tile Entity Mode
@@ -5005,3 +5006,5 @@ metaitem.wireless_electric.private.tooltip=Private (%s)
 metaitem.wireless_electric.public.tooltip=Public
 
 metaitem.wireless_battery_uv.name=§dWireless Energy Module
+
+gcyl.multiblock.vom.fluid_output_full=Fluid Output Full!
