--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -3002,7 +3002,8 @@ gcyl.multiblock.monitor_screen.tooltip.3=The screen also supports plugins.
 gcyl.multiblock.void_miner.description.1=The Void Ore Miner will produce tons of ores.
 gcyl.multiblock.void_miner.description.2=It will consume Pyrotheum and Cryotheum alternating every 10 seconds.
 gcyl.multiblock.void_miner.description.3=Temperature & Fluid use will increase with Pyrotheum and will decrease if there Cryotheum.
-gcyl.multiblock.void_miner.description.7=Temperature & Fluid use will decrease slightly if there is no Pyrotheum.
+gcyl.multiblock.void_miner.description.4=Temperature increase and decrease amount is Current Fluid Use / 100.
+gcyl.multiblock.void_miner.description.7=Temperature & Fluid use will decrease by half the normal amount if there is no Pyrotheum.
 gcyl.multiblock.void_miner.description.8=Fluid use does not reset unless overheated or breaking the controller.
 gcyl.multiblock.void_miner.description.9=Temperature will decrease slowly if work is paused.
 gcyl.multiblock.void_miner.description.5=If temperature is above the max temperature the Void Ore Miner will stop working and slowly cool down.
