--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -4741,7 +4741,10 @@ gcyl.machine.ore_factory.config.4=Macerate>Thermal Centrifuge>Macerate
 gcyl.multiblock.opf.description.1=Processes §f2^(Tier)§7 Ores. §fDuration§7 depends on §eProcess Mode§7.
 gcyl.multiblock.opf.description.6=Uses 100mb of §9Distilled Water§7 and 10mb of §6Lubricant§7 per §fOre Processed§7.
 gcyl.multiblock.opf.description.2=Use a §bScrewdriver§7 to change between §eProcess Modes§7.
-gcyl.multiblock.opf.description.3=Will §cVoid§7 if there is not enough output space.
+gcyl.multiblock.opf.description.9=§6Chanced output byproducts are calculated per operation, not per ore!
+gcyl.multiblock.opf.description.7=Only supports §fOre & Crushed Ore§7 as Input. (Crushed skips first Macerate Step)
+gcyl.multiblock.opf.description.8=§cDoes not support Sifting!
+gcyl.multiblock.opf.description.3=Will §cVoid§7 if there is not enough output space!
 gcyl.multiblock.opf.description.4=Use a §aStocking Input Bus, Hatch & ME Output Bus§7 for optimal performance.
 gcyl.multiblock.opf.description.5=Set input bus to §fAuto-Collapse§7 items if not using a Stocking Bus.
 gcyl.machine.ore_factory.current_mode=Mode:
